fix(plugins/plugin-client-common): yellow badges in sidecar have low contrast
Fixes #4050

--- a/plugins/plugin-client-common/web/css/static/Tag.scss
+++ b/plugins/plugin-client-common/web/css/static/Tag.scss
@@ -13,6 +13,6 @@
   }
   &.bx--tag--warm-gray {
     background-color: var(--color-yellow-sidecar);
-    color: var(--color-text-01);
+    color: var(--color-base00);
   }
 }
